--- a/_musinsa_teamProject/src/main/resources/templates/fashionBoardUpdate.html
+++ b/_musinsa_teamProject/src/main/resources/templates/fashionBoardUpdate.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thtmeleaf/layout"
+layout:decorate="~{layout/basic.html}">
+
+<div layout:fragment="content">
 <form action="/fashionBoardUpdate" method="post" th:object="${selectOne}">
 <input type="hidden" th:value="*{user_id}" name="user_id">
 <input type="hidden" th:value="*{board_num}" name="board_num">
@@ -22,5 +21,4 @@
 	</table>
 	<input type="submit" value="완료">
 	</form>
-</body>
-</html>
+</div>
