--- a/_musinsa_teamProject/src/main/resources/templates/fashionBoard.html
+++ b/_musinsa_teamProject/src/main/resources/templates/fashionBoard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-xmlns:layout="http://www.ultraq.net.nz/thtmeleaf/layout"
-layout:decorate="~{layout/basic.html}">
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorate="~{layout/index.html}">
 
-<div layout:fragment="content">
+<section layout:fragment="content">
 <table class="table">
 <tr>
 <td>글번호</td>
@@ -20,7 +20,7 @@ layout:decorate="~{layout/basic.html}">
 <td th:text="${list.upload_date}"></td>
 </tr>
 </table>
-</div>
+</section>
 
 <script layout:fragment="script" th:inline="javascript">
 console.log("script.....................");
