--- a/_musinsa_teamProject/src/main/resources/templates/fashionBoardOne.html
+++ b/_musinsa_teamProject/src/main/resources/templates/fashionBoardOne.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thtmeleaf/layout"
-	layout:decorate="~{layout/basic.html}">
+	layout:decorate="~{layout/index.html}">
 
 <div layout:fragment="content">
 	<form name="form" method="get" th:object="${selectOne}">
