--- a/_musinsa_teamProject/bin/main/templates/fashionBoardOne.html
+++ b/_musinsa_teamProject/bin/main/templates/fashionBoardOne.html
@@ -3,41 +3,102 @@
 	xmlns:layout="http://www.ultraq.net.nz/thtmeleaf/layout"
 	layout:decorate="~{layout/index.html}">
 
-<div layout:fragment="content">
-	<form name="form" method="get" th:object="${selectOne}">
-		<input type="hidden" th:value="*{board_num}" name="board_num">
+<style>
+.table {
+	margin: 0 auto;
+	width: 1200px;
+}
+
+</style>
+
+<div class="table" layout:fragment="content">
+	<form name="form" method="get" th:object="${selectOne}" >
+		<input type="hidden" th:value="*{board_num}" name="board_num" th:each="rlist:${rlist}">
 		<table border="1" class="container">
 			<tr>
-				<td>제목</td>
-				<td th:text="*{title}"></td>
+				<td align="left">제목</td>
+				<td th:text="*{title}" align="left"></td>
 			</tr>
 			<tr>
 				<td>작성자</td>
 				<td th:text="*{user_id}"></td>
 			</tr>
 			<tr>
+				<td colspan="2">내용</td>
+			</tr>
+			<tr>
 				<td th:text="*{content}"></td>
 			</tr>
 			<tr>
-				<td>댓글예정</td>
+				<td colspan="2" align="right"><input type="hidden" name="ref"
+					th:value="*{ref}">
+					<button type="button"
+						th:onclick="|location.href='@{/fashionBoardReplyForm(ref=*{ref},rs_level=*{rs_level},rs_step=*{rs_step})}'|">답글쓰기</button>
+					<button type="button" onclick="location.href='fashionBoard'">글목록</button>
+				</td>
 			</tr>
 		</table>
+		<div align="right"></div>
 		<div id="submit" style="display: none">
-			<input type="submit" value="수정" onclick="javascript: form.action='/fashionBoardUpdate';"> <input
-				type="submit" value="삭제" onclick="javascript: form.action='/fashionBoardDelete';">
+			<input type="submit" value="수정"
+				onclick="javascript: form.action='/fashionBoardUpdate';"> <input
+				type="submit" value="삭제"
+				onclick="javascript: form.action='/fashionBoardDelete';">
 		</div>
 	</form>
+	<!-- 댓글 작성 시작   -->
+	<form action="/replyProc" method="get">
+		<table border="1" class="container">
+		  <tr>
+		    <td>
+		      <label for="message">댓글을 남겨보세요</label>
+		    </td>
+		    </tr>
+		    <tr>
+		    <td>
+		      <textarea name="reply_content" rows="4" cols="130"></textarea>
+		      <input type="hidden" name="user_id" th:value="${selectOne.user_id}">
+		      <input type="hidden" name="board_num" th:value="${selectOne.board_num}">
+		    </td>
+		  </tr>
+		  <tr>
+		    <td colspan="2" style="text-align:right;">
+		      <input type="submit" value="Submit">
+		    </td>
+		  </tr>
+		</table>
+	</form>
+	<!-- 댓글 보기   -->
+<table border="1" style="width: 1200px"  th:each="rlist : ${rlist}">
+		<tr>
+			<td>작성자</td>
+			<td th:text="${rlist.user_id}" >첫번째 작성자</td>
+			<td>작성 시간</td>
+			<td th:text="${rlist.reply_uploadDate}">작성 시간</td>
+		</tr>
+		<tr>
+			<td colspan="2"> 댓글내용</td>
+			<td th:text="${rlist.reply_content}"></td>
+			<td>
+			<div id="submit" style="display: none" align="right">
+			<input type="submit" value="수정"
+				onclick="javascript: form.action='/replyUpdate';"> <input
+				type="submit" value="삭제"
+				onclick="javascript: form.action='/replyDelete';">
+		</div>
+			</td>
+		</tr>
+	
+	</table>
 </div>
 <script layout:fragment="script" th:inline="javascript">
-
-var sessionUser = /*[[${sessionUser}]]*/null; /*변수값이 없으면 오른쪽 null이 기본값이 됨*/
-var userid = /*[[*{selectOne.user_id}]]*/null;
-console.log(sessionUser);
-console.log(userid);
-if(sessionUser != null){
-	if(sessionUser == userid){
-		document.getElementById('submit').style.display = 'inline';
+	var sessionUser = /*[[${sessionUser}]]*/null; /*변수값이 없으면 오른쪽 null이 기본값이 됨*/
+	var userid = /*[[*{selectOne.user_id}]]*/null;
+	console.log(sessionUser);
+	console.log(userid);
+	if (sessionUser != null) {
+		if (sessionUser == userid) {
+			document.getElementById('submit').style.display = 'inline';
+		}
 	}
-}
-
 </script>
